tests/should-fail/semantics/return-type-conv.j
function a takes handle h returns unit
	return h
endfunction